style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.inter {
    font-family: "Inter", sans-serif;
    font-optical-sizing: auto;
}

body {
    background: #1A0B2E;
    color: white;
}

/* common classes  */

.container {
    /* width: 62%; */
    max-width: 1200px;
    margin: 0 auto;
}

.flex {
    display: flex;
}

.grid {
    display: grid;
}

.center {
    display: flex;
    align-items: center;
    justify-content: center;
}

.gradient {
    background: linear-gradient(47deg, rgba(247, 233, 63, 1) 17%, rgba(251, 9, 180, 1) 50%, rgba(145, 0, 248, 1) 81.60%);
}

.bg-color {
    background-color: #412567;
}

.text-regular {
    font-size: 1rem;
    color: white;
}


/* navbar section  */

#header {
    width: 100%;
    height: auto;
    /* background-color: #412567; */
    border: 1px solid #000;
}

.navbar {
    padding: 36px 0;
    align-items: center;
    justify-content: space-between;
}

.logo {
    font-size: 65px;
    font-weight: bold;
    color: white;
}

.logo span {
    color: transparent;
    background-clip: text;

}

.navbar ul {
    display: flex;
    gap: 32px;
    list-style: none;
}

.navbar ul a {
    text-decoration: none;
    text-transform: capitalize;
    color: white;

}

.btn {
    /* border: 1px solid #28db10; */
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 4px;
    font-size: 1rem;
    font-weight: 600;
    color: white;
    padding: 12px 16px;
    border-radius: 10000px;
    border: none;
    text-align: center;

}

.menubar {
    display: none;
}

/* banner section  */

#banner {

    min-height: clamp(400px, 60vh, 600px);
    background: url(./assets/hero-bg.png) center / cover no-repeat;
    display: flex;
    justify-content: center;
}

.banner-container {
    margin: 100px auto;
    display: flex;
    flex-direction: column;
    gap: 40px;
}

.banner-content {
    text-align: center;
}

.banner-content .hero-head {
    font-size: 4rem;
    font-weight: bolder;
    color: white;
    margin-bottom: 8px;
}

.text {
    font-size: 1rem;
    color: white;
    margin-bottom: 24px;
}

.banner-buttons {

    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8px;

}

.banner-btn1 {
    padding: 12px 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8px;
    border-radius: 10000px;
    border: none;
    color: white;
    cursor: pointer;

}

.banner-btn1 p {
    font-size: 1rem;
    font-weight: 600;
    text-transform: capitalize;

}


.banner-btn2 {
    background: transparent;
    padding: 12px 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8px;
    border: 1px solid #00FF88;
    border-radius: 10000px;
    cursor: pointer;

}

.banner-btn2 img {
    color: #00FF88;

}

.banner-btn2 p {
    font-size: 1rem;
    font-weight: 600;
    text-transform: capitalize;
    color: #00FF88;

}

.image-container {
    margin: 0 auto;
}

.bg-img {
    width: max-content;
    padding: 69px 75px 81px 75px;
    background: url(./assets/hero-circle.png) center / contain no-repeat;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    text-align: center;

}

.bg-img .badge {
    padding: 8px 16px;
    position: absolute;
    text-transform: uppercase;
    background: #00FF88;
    color: #1A0B2E;
    font-size: 18px;
    font-weight: 600;
    border-radius: 1000px;
    top: 12px;
    right: 23px;
    animation: pulse 1s linear infinite;

}

/* podcast section  */

.podcast-container {
    margin-top: 50px;
    margin-bottom: 50px;
    text-align: center;
}

.podcast-container h1 {
    font-size: 3rem;
    font-weight: bold;
    margin-bottom: 16px;

}

.podcast-container p {
    font-size: 1rem;
    line-height: 20px;
    color: white;
    margin-bottom: 30px;

}

.card-container {
    margin-top: 160px;
    justify-content: space-between;
    align-items: center;
}

.card-container .card h3 {
    font-size: 3rem;
    font-weight: bold;
    color: #00FF88;
    margin-bottom: 16px;

}

.card-container .card p {
    font-size: 1rem;
    line-height: 20px;
    color: white;
}




@keyframes pulse {
    0% {
        transform: scale(1);
        box-shadow: 0 0 0 0 rgba(255, 59, 59, 0.6);
    }

    75% {
        transform: scale(1.05);
        box-shadow: 0 0 0 0 rgba(255, 59, 59, 0);
    }

    100% {
        transform: scale(1);
        box-shadow: 0 0 0 0 rgba(255, 59, 59, 0.6);
    }
}


.bg-img img {
    width: 200px;
    height: 200px;
    object-fit: contain;
    object-position: center;


}

/* techwave section  */
#techwave {
    width: 100%;
    padding: 120px;
    background-color: #230E3D;
}

.takewave-container h1 {
    text-align: center;
}

.techwave-card-container {
    margin: 40px 0;
    display: grid;
    gap: 30px;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 225px);
}

.tech-card {

    border-radius: 40px;
    padding: 0 40px;
    display: flex;
    justify-content: start;
    align-items: center;
    box-shadow: 0 0 8px 4px #1c0b30;
    overflow: hidden;

}

.card-content img {
    margin-bottom: 16px;
}

.card-content h3 {
    font-size: 1.4rem;
    font-weight: bold;
    color: white;
    margin-bottom: 16px;
}

.card-content p {
    font-size: 1rem;
    line-height: 24px;
    color: white;
    margin-bottom: 16px;
}

.col-span2 {
    display: grid;
    grid-column: span 2;
}

.row-span2 {
    display: grid;
    grid-row: span 2;

}

/* features section  */
#features {
    padding: 120px 0;
}

.features-container h1 {
    text-align: center;
}

.feature-card-container {
    margin: 40px auto;
    display: flex;
    gap: 30px;
    justify-content: space-between;
    align-items: center;
}

.feature-card {
    width: 380px;
    height: 440px;
    /* border: 1px solid #b80707; */
    border-radius: 40px;
    display: grid;
    grid-template-rows: 50% 50%;
    /* display: flex;
    flex-direction: column; */
    box-shadow: 0 0 8px 0 #6b33b4;
    overflow: hidden;
    /* border: none; */
}

.iframe-content {
    /* border: 1px solid #1a0dd1; */
    overflow: hidden;
}

.iframe-content iframe {
    width: 100%;
    height: 100%;
}

.text-content {
    /* border: 1px solid #11f049; */
    padding: 20px;
    display: flex;
    flex-direction: column;
    justify-content: start;
}

.text-content h1 {
    font-size: 1.5rem;
    font-weight: bold;
    margin-bottom: 12px;
    text-align: start;
}

.text-content p {
    font-size: 16px;
    line-height: 24px;
    color: white;
    margin-bottom: 12px;
}

.clock {
    display: flex;
    align-items: center;
    gap: 6px;

}

.clock span {
    color: #00FF88;

}


/* challenge section  */
.challenge-container h1 {
    text-align: center;
}

.challenge-content {
    margin: 40px auto;
    background-color: rgba(53, 17, 101, 0.4);
    /* border: 1px solid #f5f5f5; */
    border-radius: 40px;
    display: flex;
    padding: 40px;
    justify-content: center;
    align-items: center;
    gap: 24px;
}

.image img {
    object-fit: contain;
    object-position: center;

}

.social-logos {
    display: flex;
    justify-content: start;
    align-items: center;
    gap: 8px;
}

.social-logos div {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    border: 1px solid #533C72;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8px;
}

.host-details h2 {
    font-size: 2rem;
    font-weight: bold;
    color: white;
    margin-bottom: 16px;
}

.host-details p {
    font-size: 1rem;
    line-height: 24px;
    color: #FFFFFF;
    margin-bottom: 16px;
}


/* footer section  */

#footer {

    width: 100%;
    min-height: clamp(400px, 60vh, 600px);
    /* background: url(./assets/footer-bg.png) center / cover no-repeat; */
    background-image: url(./assets/footer-bg.png);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;


    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.brand-container ul {
    display: flex;
    gap: 40px;
    justify-content: center;
    align-items: center;

}

.brand-container ul {
    list-style: none;

}


.brand-container ul a {
    text-decoration: none;
    display: flex;
    gap: 8px;
    align-items: center;

}

.footer-container {


    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 32px;
}

.brand-container p {
    font-size: 1rem;
    color: #FAFAFA;
}
.copy-right{
    
    border-top: 1px solid white;

}


/* small device  */


@media screen and (max-width:576px) {
    /* body {
        background: #8cdce2;
    } */

    .navbar ul {
        display: none;
    }

    .navbar button {
        display: none;
    }

    .navbar .menubar {
        background: transparent;
        display: block;
    }

    .navbar {
        width: 100%;
        padding: 20px;
    }

    .logo {
        font-size: 35px;
    }

    /* banner section  */
    #banner {
        width: 100%;
        padding: 40px 20px;
    }

    .banner-container {
        margin: 0;
        width: 100%;

    }

    /* podcast section  */
    #podcast {
        width: 100%;
        margin: 0;
        padding: 40px 20px;
    }

    .podcast-container {
        width: 100%;
        padding: 0;
        margin: 0;
    }

    .card-container {
        width: 100%;
        display: grid;
        grid-template-columns: repeat(2, 1fr);
    }

    /* techwave section  */

    #techwave {
        width: 100%;
        padding: 40px 20px;

    }

    .takewave-container {
        width: 100%;
    }

    .techwave-card-container {
        display: flex;
        flex-direction: column;
        gap: 30px;

    }

    .tech-card {
        padding: 40px 20px;
    }

    /* feature section  */

    #features {
        padding: 40px 16px;

    }

    .features-container {
        width: 100%;
    }
    .feature-card{
        width: 100%;
    }

    .feature-card-container {
        width: 100%;
        display: flex;
        flex-direction: column;
        gap: 30px;
    }

    /* challenge section  */
    #challenge {
        padding: 40px 20px;
    }

    .challenge-container {
        width: 100%;

    }

    .challenge-content {
        padding: 40px 20px;
        display: flex;
        flex-direction: column;
        text-align: center;
    }

    .social-logos {

        display: flex;
        justify-content: center;
        align-items: center;

    }

    /* footer section  */
    #footer {

        background-size: cover;
        background-position: center;
        min-height: 220px;
        height: auto;
        padding: 2rem 1rem;



    }

    .brand-container ul {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
    }

    .footer-container p {
        text-align: center;
    }
}

